# salmiac-sprayer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-THIRD-PARTY.md  README.md  ROADMAP.md  TODO.md  build.rs  pubspec.yaml  salmiac_sprayer_fixed.apk.idsig
.github/workflows/: ci.yml  release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/salmiac_sprayer/: MainActivity.kt
examples/: desktop.rs  generate_icons.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: sprayer_data.dart  sprayer_settings.dart
lib/screens/: monitor_screen.dart  settings_screen.dart
lib/services/: controller_service.dart  sprayer_settings_storage.dart
lib/utils/: constants.dart
lib/widgets/: pressure_display.dart  speed_display.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
locales/: cs.json  da.json  de.json  en.json  es.json  et.json  fi.json  fr.json  hu.json  it.json  nl.json  pl.json  pt.json  sv.json  tr.json
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
res/: icon.rc
scripts/: generate_ico.js  generate_logos.js  package-lock.json  package.json  simulate_sprayer.py
scripts/icon-gen/: Cargo.toml
scripts/icon-gen/src/: main.rs
src/: app.rs  i18n.rs  lib.rs  main.rs  protocol.rs
src/models/: mod.rs  sprayer_data.rs  sprayer_settings.rs
src/screens/: mod.rs  monitor.rs  settings.rs
src/services/: audio.rs  controller.rs  mod.rs  storage.rs
src/widgets/: mod.rs  pressure_display.rs  speed_display.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
