[package]
name = "salmiac-sprayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "salmiac_sprayer_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow", "persistence", "android-native-activity", "default_fonts"] }
egui = "0.34.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.10"
confy = "2.0.0"
winit = "0.30.13"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.13"

[package.metadata.android]
package = "com.salmiac.sprayer"
label = "Salmiac Sprayer"
assets = "assets"
res = "res"
# icon = "@mipmap/ic_launcher"
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]
min_sdk_version = 21
target_sdk_version = 30
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE"
]
