[package]
name = "salmiac-sprayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "salmiac_sprayer"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "salmiac-sprayer-app"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["glow", "persistence", "android-native-activity", "default_fonts"] }
egui = "0.34.2"
egui_extras = { version = "0.34.2", features = ["svg", "image"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { package = "bincode-next", version = "3.0.0-rc.3" }
anyhow = "1.0"
rodio = "0.20.1"
log = "0.4"
env_logger = "0.11.10"
confy = "2.0.0"
winit = "0.30.13"
image = "0.25.10"

[dev-dependencies]
resvg = "0.47.0"
tiny-skia = "0.12.0"

[build-dependencies]
embed-resource = "3.0.9"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.15.1"
jni = "0.21"
ndk-context = "0.1"
